initial doxygen setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,14 @@ option(CTPC_EXAMPLES "Build ctpc examples" OFF)
 if(CTPC_EXAMPLES)
     add_subdirectory(examples)
 endif()
+
+option(CTPC_DOCS "Build ctpc docs" ON)
+if(CTPC_DOCS)
+    find_package(Doxygen)
+    if(DOXYGEN_FOUND)
+        set(DOXYGEN_GENERATE_MAN NO)
+        set(DOXYGEN_GENERATE_HTML YES)
+        set(DOXYGEN_EXCLUDE_SYMBOLS detail)
+        doxygen_add_docs(docs "${PROJECT_SOURCE_DIR}/include")
+    endif()
+endif()
