--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,10 @@ if(CTPC_DOCS)
     if(DOXYGEN_FOUND)
         set(DOXYGEN_GENERATE_MAN NO)
         set(DOXYGEN_GENERATE_HTML YES)
+        set(DOXYGEN_GENERATE_TREEVIEW YES)
         set(DOXYGEN_EXCLUDE_SYMBOLS detail)
+        set(DOXYGEN_EXTRACT_STATIC YES)
+        set(DOXYGEN_HIDE_SCOPE_NAMES YES)
         doxygen_add_docs(docs "${PROJECT_SOURCE_DIR}/include")
     endif()
 endif()
