--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third-party/ctre"]
 	path = third-party/ctre
 	url = https://github.com/hanickadot/compile-time-regular-expressions.git
+[submodule "third-party/doxygen-awesome-css"]
+	path = third-party/doxygen-awesome-css
+	url = https://github.com/jothepro/doxygen-awesome-css.git
